--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,10 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     line-height: 1.5;
+
+}
+header img {
+    width: 30%;
 }
 
 header {
@@ -37,4 +41,37 @@ header {
     min-width: 225px;
     width: 25%;
     padding: 30px 30px;
+}
+
+.live-a-message {
+    text-align: center;
+}
+
+footer ul li {
+    display: inline-block;
+    text-align: center;
+    padding-bottom: 20px;
+    margin-left: 10px;
+}
+
+
+.minor-project img:hover {
+    opacity: 0.5;
+}
+
+.minor-project img {
+    color: navy;
+    width: 90%;
+    opacity: 1.0;
+    /* align-items: center; */
+}
+
+.minor-project {
+    color: green;
+    width: 40%;
+    align-items: center;
+}
+
+.linked {
+    align-items: center;
 }
